Create an initial paint device in all KisFileLayer constructors

BUG:389067

Tested with:

from krita import *
doc = Krita.instance().activeDocument()
fl = doc.createFileLayer("test", "/home/boud/Pictures/gfx_Pepper-and-Carrot_by-David-Revoy_E24P05.jpg", "")
root = doc.rootNode()
children = root.childNodes()
root.addChildNode(fl, children[0])